chore: extend enum endpoint (#848)
* chore: detail log message in versionSupportCheck

* chore: change /api/utils/enums endpoint to return an extended list of all enums

* test: fix failing tests

* fix: change method type to GET

* chore: add jsonInput to objects

* chore: add list of available types to response object

* test: update GuiControllerTest

* docs: update openapi.yaml

* test: add tests

* docs: update CHANGELOG.md

* chore: re-add ids enums for security profile and connector status
